--- a/slides/weektwo/index.qmd
+++ b/slides/weektwo/index.qmd
@@ -56,6 +56,26 @@ What could be done to prevent the attack?
 
 :::
 
+## Learning the Lingo: DRY
+
+::: incremental
+
+- Key strategy for ensuring system security:
+  - **DRY**: *D*on't *R*epeat *Y*ourself
+    - Guideline for automation and system design
+    - Avoid manual repetition by using scripts and tools
+    - Reuse verified resources across multiple systems
+
+:::
+
+::: {.fragment .fade .boxed-content style="margin-top: 0.25em; font-size: 0.9em;"}
+
+**Key Questions**: What are some practical ways to introduce **DRY** into your
+systems and development practices? What is the downside of the **DRY** strategy?
+How does this connect to *zero-touch deployment*?
+
+:::
+
 ## Learning the Lingo: AAA
 
 ::: incremental
@@ -73,26 +93,6 @@ What could be done to prevent the attack?
 **Key Questions**: Why are these appropriate strategies for ensuring system
 security? What are the limitations of each strategy? What is the fundamental
 trade-off in computer security? Why?
-
-:::
-
-## Learning the Lingo: DRY
-
-::: incremental
-
-- Key strategy for ensuring system security:
-  - **DRY**: *D*on't *R*epeat *Y*ourself
-    - Guideline for automation and system design
-    - Avoid manual repetition by using scripts and tools
-    - Reuse resources, such as databases, across multiple systems
-
-:::
-
-::: {.fragment .fade .boxed-content style="margin-top: 0.25em; font-size: 0.9em;"}
-
-**Key Questions**: What is an attack a "hacker" could take to comprise one of
-the **CIA** principles? How would the attack compromise the **CIA** principles?
-What could be done to prevent the attack?
 
 :::
 
