--- a/index.qmd
+++ b/index.qmd
@@ -14,8 +14,8 @@ development of your professional and technical capacities in the field of
 computer security. One of the primary goals of this course is to create a
 *security synapse* by connecting high-level concepts in the field of computer
 security with their implementation in programming languages such as Python,
-Java, JavaScript, C, Go, and Rust. Along with leverage research papers and
-popular-press articles, this course uses two open-access books: [Computer
+Java, JavaScript, C, Go, and Rust. Along with leveraging research papers and
+popular-press articles, this course references two open-access books: [Computer
 Systems Security: Planning for Success](https://web.njit.edu/~rt494/security/)
 and [Cracking Codes with Python](https://inventwithpython.com/cracking/). You
 can access all of the source code and technical content for this course by
