--- a/index.qmd
+++ b/index.qmd
@@ -19,7 +19,7 @@ popular-press articles, this course references two open-access books: [Computer
 Systems Security: Planning for Success](https://web.njit.edu/~rt494/security/)
 and [Cracking Codes with Python](https://inventwithpython.com/cracking/). You
 can access all of the source code and technical content for this course by
-checking out its GitHub repository and following along with the
+checking out its [GitHub organization](https://github.com/SecuritySynapse).
 [schedule](schedule/index.qmd) and the [slides](slides/index.qmd).
 
 ## Resources for Making a Security Synapse
